src/main/java/org/jfaster/badger/sql/parse/BadgerSqlParser.java
// Generated from BadgerSql.g4 by ANTLR 4.7.2

package org.jfaster.badger.sql.parse;

import java.util.ArrayList;
import java.util.List;

import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;
import org.jfaster.badger.query.sql.SqlTree;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BadgerSqlParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, INT = 4, DEC = 5, MARK = 6, AD = 7, OD = 8, IN = 9, BA = 10,
            LK = 11, IS = 12, NOT = 13, NUL = 14, QuoteString = 15, ID = 16, EQ = 17, LT = 18, GT = 19,
            NE = 20, LE = 21, GE = 22, WS = 23;
    public static final int
            RULE_logicalExpression = 0, RULE_relationalExpression = 1, RULE_updateExpression = 2,
            RULE_updateField = 3, RULE_logicalOperate = 4, RULE_leftBracket = 5, RULE_rightBracket = 6,
            RULE_atom = 7, RULE_updateAtom = 8, RULE_aton = 9, RULE_operate = 10;

    private static String[] makeRuleNames() {
        return new String[]{
                "logicalExpression", "relationalExpression", "updateExpression", "updateField",
                "logicalOperate", "leftBracket", "rightBracket", "atom", "updateAtom",
                "aton", "operate"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "'('", "','", "')'", null, null, "'?'", null, null, null, null,
                null, null, null, null, null, null, "'='", "'<'", "'>'", null, "'<='",
                "'>='"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, null, null, null, "INT", "DEC", "MARK", "AD", "OD", "IN", "BA",
                "LK", "IS", "NOT", "NUL", "QuoteString", "ID", "EQ", "LT", "GT", "NE",
                "LE", "GE", "WS"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "BadgerSql.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }


    StringBuilder sqlBuilder = new StringBuilder(128);
    List<Object> values = new ArrayList<Object>(16);
    List<String> fieldList = new ArrayList<String>(16);
    List<Object> condition = new ArrayList<Object>(16);
    int indexLevel = 1;

    StringBuilder updateBuilder = new StringBuilder(64);
    List<Object> updateValues = new ArrayList<Object>(16);
    List<String> updateFieldList = new ArrayList<String>(16);

    public String getSql() {
        return sqlBuilder.toString();
    }

    public List<String> getField() {
        return fieldList;
    }

    public List<Object> getSqlTree() {
        return condition;
    }

    public List<Object> getValues() {
        return values;
    }

    public String getUpdateStatement() {
        if (updateBuilder.length() > 0) {
            updateBuilder.deleteCharAt(updateBuilder.length() - 1);
        }
        return updateBuilder.toString();
    }

    public List<String> getUpdateField() {
        return updateFieldList;
    }

    public List<Object> getUpdateValues() {
        return updateValues;
    }


    public BadgerSqlParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class LogicalExpressionContext extends ParserRuleContext {
        public RelationalExpressionContext relationalExpression() {
            return getRuleContext(RelationalExpressionContext.class, 0);
        }

        public List<LogicalOperateContext> logicalOperate() {
            return getRuleContexts(LogicalOperateContext.class);
        }

        public LogicalOperateContext logicalOperate(int i) {
            return getRuleContext(LogicalOperateContext.class, i);
        }

        public List<LogicalExpressionContext> logicalExpression() {
            return getRuleContexts(LogicalExpressionContext.class);
        }

        public LogicalExpressionContext logicalExpression(int i) {
            return getRuleContext(LogicalExpressionContext.class, i);
        }

        public LeftBracketContext leftBracket() {
            return getRuleContext(LeftBracketContext.class, 0);
        }

        public RightBracketContext rightBracket() {
            return getRuleContext(RightBracketContext.class, 0);
        }

        public LogicalExpressionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_logicalExpression;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof BadgerSqlListener)
                ((BadgerSqlListener) listener).enterLogicalExpression(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof BadgerSqlListener)
                ((BadgerSqlListener) listener).exitLogicalExpression(this);
        }
    }

    public final LogicalExpressionContext logicalExpression() throws RecognitionException {
        LogicalExpressionContext _localctx = new LogicalExpressionContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_logicalExpression);
        try {
            int _alt;
            setState(42);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case INT:
                case ID:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(22);
                    relationalExpression();
                    setState(28);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 0, _ctx);
                    while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                        if (_alt == 1) {
                            {
                                {
                                    setState(23);
                                    logicalOperate();
                                    setState(24);
                                    logicalExpression();
                                }
                            }
                        }
                        setState(30);
                        _errHandler.sync(this);
                        _alt = getInterpreter().adaptivePredict(_input, 0, _ctx);
                    }
                }
                break;
                case T__0:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(31);
                    leftBracket();
                    setState(32);
                    logicalExpression();
                    setState(33);
                    rightBracket();
                    setState(39);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 1, _ctx);
                    while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                        if (_alt == 1) {
                            {
                                {
                                    setState(34);
                                    logicalOperate();
                                    setState(35);
                                    logicalExpression();
                                }
                            }
                        }
                        setState(41);
                        _errHandler.sync(this);
                        _alt = getInterpreter().adaptivePredict(_input, 1, _ctx);
                    }
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class RelationalExpressionContext extends ParserRuleContext {
        public Token fieldName;
        public OperateContext op;
        public AtonContext value;

        public TerminalNode IN() {
            return getToken(BadgerSqlParser.IN, 0);
        }

        public List<AtomContext> atom() {
            return getRuleContexts(AtomContext.class);
        }

        public AtomContext atom(int i) {
            return getRuleContext(AtomContext.class, i);
        }

        public TerminalNode ID() {
            return getToken(BadgerSqlParser.ID, 0);
        }

        public TerminalNode BA() {
            return getToken(BadgerSqlParser.BA, 0);
        }

        public TerminalNode AD() {
            return getToken(BadgerSqlParser.AD, 0);
        }

        public TerminalNode LK() {
            return getToken(BadgerSqlParser.LK, 0);
        }

        public OperateContext operate() {
            return getRuleContext(OperateContext.class, 0);
        }

        public TerminalNode INT() {
            return getToken(BadgerSqlParser.INT, 0);
        }

        public AtonContext aton() {
            return getRuleContext(AtonContext.class, 0);
        }

        public TerminalNode IS() {
            return getToken(BadgerSqlParser.IS, 0);
        }

        public TerminalNode NUL() {
            return getToken(BadgerSqlParser.NUL, 0);
        }

        public TerminalNode NOT() {
            return getToken(BadgerSqlParser.NOT, 0);
        }

        public RelationalExpressionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_relationalExpression;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof BadgerSqlListener)
                ((BadgerSqlListener) listener).enterRelationalExpression(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof BadgerSqlListener)
                ((BadgerSqlListener) listener).exitRelationalExpression(this);
        }
    }

    public final RelationalExpressionContext relationalExpression() throws RecognitionException {
        RelationalExpressionContext _localctx = new RelationalExpressionContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_relationalExpression);
        int _la;
        try {
            setState(93);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 4, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    int count = 0;
                    setState(45);
                    ((RelationalExpressionContext) _localctx).fieldName = match(ID);
                    setState(46);
                    match(IN);
                    setState(47);
                    match(T__0);
                    setState(48);
                    atom();
                    count++;
                    setState(56);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == T__1) {
                        {
                            {
                                setState(50);
                                match(T__1);
                                setState(51);
                                atom();
                                count++;
                            }
                        }
                        setState(58);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(59);
                    match(T__2);

                    condition.add(new SqlTree((((RelationalExpressionContext) _localctx).fieldName != null ? ((RelationalExpressionContext) _localctx).fieldName.getText() : null), "in", indexLevel, count));
                    sqlBuilder.append((((RelationalExpressionContext) _localctx).fieldName != null ? ((RelationalExpressionContext) _localctx).fieldName.getText() : null))
                            .append(" IN (?");
                    fieldList.add((((RelationalExpressionContext) _localctx).fieldName != null ? ((RelationalExpressionContext) _localctx).fieldName.getText() : null));
                    for (; count > 1; count--) {
                        sqlBuilder.append(", ?");
                        fieldList.add((((RelationalExpressionContext) _localctx).fieldName != null ? ((RelationalExpressionContext) _localctx).fieldName.getText() : null));
                    }
                    sqlBuilder.append(")");

                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(62);
                    ((RelationalExpressionContext) _localctx).fieldName = match(ID);
                    setState(63);
                    match(BA);
                    setState(64);
                    atom();
                    setState(65);
                    match(AD);
                    setState(66);
                    atom();

                    {
                        sqlBuilder.append((((RelationalExpressionContext) _localctx).fieldName != null ? ((RelationalExpressionContext) _localctx).fieldName.getText() : null)).append(" BETWEEN ? AND ? ");
                        fieldList.add((((RelationalExpressionContext) _localctx).fieldName != null ? ((RelationalExpressionContext) _localctx).fieldName.getText() : null));
                        fieldList.add((((RelationalExpressionContext) _localctx).fieldName != null ? ((RelationalExpressionContext) _localctx).fieldName.getText() : null));
                        condition.add(new SqlTree((((RelationalExpressionContext) _localctx).fieldName != null ? ((RelationalExpressionContext) _localctx).fieldName.getText() : null), "between and", indexLevel, 2));
                    }

                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(69);
                    ((RelationalExpressionContext) _localctx).fieldName = match(ID);
                    setState(70);
                    match(LK);
                    setState(71);
                    atom();

                    {
                        sqlBuilder.append((((RelationalExpressionContext) _localctx).fieldName != null ? ((RelationalExpressionContext) _localctx).fieldName.getText() : null)).append(" LIKE ?");
                        fieldList.add((((RelationalExpressionContext) _localctx).fieldName != null ? ((RelationalExpressionContext) _localctx).fieldName.getText() : null));
                        condition.add(new SqlTree((((RelationalExpressionContext) _localctx).fieldName != null ? ((RelationalExpressionContext) _localctx).fieldName.getText() : null), "like", indexLevel, 1));
                    }

                }
                break;
                case 4:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(74);
                    ((RelationalExpressionContext) _localctx).fieldName = match(ID);
                    setState(75);
                    ((RelationalExpressionContext) _localctx).op = operate();
                    setState(76);
                    atom();

                    sqlBuilder.append((((RelationalExpressionContext) _localctx).fieldName != null ? ((RelationalExpressionContext) _localctx).fieldName.getText() : null))
                            .append(' ')
                            .append((((RelationalExpressionContext) _localctx).op != null ? _input.getText(((RelationalExpressionContext) _localctx).op.start, ((RelationalExpressionContext) _localctx).op.stop) : null))
                            .append(' ')
                            .append("?");
                    fieldList.add((((RelationalExpressionContext) _localctx).fieldName != null ? ((RelationalExpressionContext) _localctx).fieldName.getText() : null));
                    condition.add(new SqlTree((((RelationalExpressionContext) _localctx).fieldName != null ? ((RelationalExpressionContext) _localctx).fieldName.getText() : null), (((RelationalExpressionContext) _localctx).op != null ? _input.getText(((RelationalExpressionContext) _localctx).op.start, ((RelationalExpressionContext) _localctx).op.stop) : null), indexLevel, 1));

                }
                break;
                case 5:
                    enterOuterAlt(_localctx, 5);
                {
                    setState(79);
                    ((RelationalExpressionContext) _localctx).fieldName = match(INT);
                    setState(80);
                    ((RelationalExpressionContext) _localctx).op = operate();
                    setState(81);
                    ((RelationalExpressionContext) _localctx).value = aton();

                    sqlBuilder.append((((RelationalExpressionContext) _localctx).fieldName != null ? ((RelationalExpressionContext) _localctx).fieldName.getText() : null))
                            .append(' ')
                            .append((((RelationalExpressionContext) _localctx).op != null ? _input.getText(((RelationalExpressionContext) _localctx).op.start, ((RelationalExpressionContext) _localctx).op.stop) : null))
                            .append(' ')
                            .append((((RelationalExpressionContext) _localctx).value != null ? _input.getText(((RelationalExpressionContext) _localctx).value.start, ((RelationalExpressionContext) _localctx).value.stop) : null));

                }
                break;
                case 6:
                    enterOuterAlt(_localctx, 6);
                {
                    setState(84);
                    ((RelationalExpressionContext) _localctx).fieldName = match(ID);
                    setState(85);
                    match(IS);
                    setState(86);
                    match(NUL);

                    sqlBuilder.append((((RelationalExpressionContext) _localctx).fieldName != null ? ((RelationalExpressionContext) _localctx).fieldName.getText() : null))
                            .append(' ')
                            .append("IS NULL");

                }
                break;
                case 7:
                    enterOuterAlt(_localctx, 7);
                {
                    setState(88);
                    ((RelationalExpressionContext) _localctx).fieldName = match(ID);
                    setState(89);
                    match(IS);
                    setState(90);
                    match(NOT);
                    setState(91);
                    match(NUL);

                    sqlBuilder.append((((RelationalExpressionContext) _localctx).fieldName != null ? ((RelationalExpressionContext) _localctx).fieldName.getText() : null))
                            .append(' ')
                            .append("IS NOT NULL");

                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class UpdateExpressionContext extends ParserRuleContext {
        public List<UpdateFieldContext> updateField() {
            return getRuleContexts(UpdateFieldContext.class);
        }

        public UpdateFieldContext updateField(int i) {
            return getRuleContext(UpdateFieldContext.class, i);
        }

        public UpdateExpressionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_updateExpression;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof BadgerSqlListener)
                ((BadgerSqlListener) listener).enterUpdateExpression(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof BadgerSqlListener)
                ((BadgerSqlListener) listener).exitUpdateExpression(this);
        }
    }

    public final UpdateExpressionContext updateExpression() throws RecognitionException {
        UpdateExpressionContext _localctx = new UpdateExpressionContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_updateExpression);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(95);
                updateField();
                setState(100);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__1) {
                    {
                        {
                            setState(96);
                            match(T__1);
                            setState(97);
                            updateField();
                        }
                    }
                    setState(102);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class UpdateFieldContext extends ParserRuleContext {
        public Token fieldName;

        public TerminalNode EQ() {
            return getToken(BadgerSqlParser.EQ, 0);
        }

        public UpdateAtomContext updateAtom() {
            return getRuleContext(UpdateAtomContext.class, 0);
        }

        public TerminalNode ID() {
            return getToken(BadgerSqlParser.ID, 0);
        }

        public UpdateFieldContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_updateField;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof BadgerSqlListener)
                ((BadgerSqlListener) listener).enterUpdateField(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof BadgerSqlListener)
                ((BadgerSqlListener) listener).exitUpdateField(this);
        }
    }

    public final UpdateFieldContext updateField() throws RecognitionException {
        UpdateFieldContext _localctx = new UpdateFieldContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_updateField);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(103);
                ((UpdateFieldContext) _localctx).fieldName = match(ID);
                setState(104);
                match(EQ);
                setState(105);
                updateAtom();

                updateBuilder
                        .append((((UpdateFieldContext) _localctx).fieldName != null ? ((UpdateFieldContext) _localctx).fieldName.getText() : null))
                        .append(" = ")
                        .append("?")
                        .append(",");
                updateFieldList.add((((UpdateFieldContext) _localctx).fieldName != null ? ((UpdateFieldContext) _localctx).fieldName.getText() : null));

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class LogicalOperateContext extends ParserRuleContext {
        public TerminalNode AD() {
            return getToken(BadgerSqlParser.AD, 0);
        }

        public TerminalNode OD() {
            return getToken(BadgerSqlParser.OD, 0);
        }

        public LogicalOperateContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_logicalOperate;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof BadgerSqlListener)
                ((BadgerSqlListener) listener).enterLogicalOperate(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof BadgerSqlListener)
                ((BadgerSqlListener) listener).exitLogicalOperate(this);
        }
    }

    public final LogicalOperateContext logicalOperate() throws RecognitionException {
        LogicalOperateContext _localctx = new LogicalOperateContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_logicalOperate);
        try {
            setState(112);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case AD:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(108);
                    match(AD);
                    sqlBuilder.append(" AND ");
                    condition.add("and");
                }
                break;
                case OD:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(110);
                    match(OD);
                    sqlBuilder.append(" OR ");
                    condition.add("or");
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class LeftBracketContext extends ParserRuleContext {
        public LeftBracketContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_leftBracket;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof BadgerSqlListener)
                ((BadgerSqlListener) listener).enterLeftBracket(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof BadgerSqlListener)
                ((BadgerSqlListener) listener).exitLeftBracket(this);
        }
    }

    public final LeftBracketContext leftBracket() throws RecognitionException {
        LeftBracketContext _localctx = new LeftBracketContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_leftBracket);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(114);
                match(T__0);
                sqlBuilder.append("(");
                indexLevel++;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class RightBracketContext extends ParserRuleContext {
        public RightBracketContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_rightBracket;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof BadgerSqlListener)
                ((BadgerSqlListener) listener).enterRightBracket(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof BadgerSqlListener)
                ((BadgerSqlListener) listener).exitRightBracket(this);
        }
    }

    public final RightBracketContext rightBracket() throws RecognitionException {
        RightBracketContext _localctx = new RightBracketContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_rightBracket);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(117);
                match(T__2);
                sqlBuilder.append(")");
                indexLevel--;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class AtomContext extends ParserRuleContext {
        public Token INT;
        public Token DEC;
        public Token QuoteString;
        public Token MARK;

        public TerminalNode INT() {
            return getToken(BadgerSqlParser.INT, 0);
        }

        public TerminalNode DEC() {
            return getToken(BadgerSqlParser.DEC, 0);
        }

        public TerminalNode QuoteString() {
            return getToken(BadgerSqlParser.QuoteString, 0);
        }

        public TerminalNode MARK() {
            return getToken(BadgerSqlParser.MARK, 0);
        }

        public AtomContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_atom;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof BadgerSqlListener)
                ((BadgerSqlListener) listener).enterAtom(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof BadgerSqlListener)
                ((BadgerSqlListener) listener).exitAtom(this);
        }
    }

    public final AtomContext atom() throws RecognitionException {
        AtomContext _localctx = new AtomContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_atom);
        try {
            setState(128);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case INT:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(120);
                    ((AtomContext) _localctx).INT = match(INT);
                    values.add(Long.parseLong((((AtomContext) _localctx).INT != null ? ((AtomContext) _localctx).INT.getText() : null)));
                }
                break;
                case DEC:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(122);
                    ((AtomContext) _localctx).DEC = match(DEC);
                    values.add(Double.parseDouble((((AtomContext) _localctx).DEC != null ? ((AtomContext) _localctx).DEC.getText() : null)));
                }
                break;
                case QuoteString:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(124);
                    ((AtomContext) _localctx).QuoteString = match(QuoteString);
                    values.add((((AtomContext) _localctx).QuoteString != null ? ((AtomContext) _localctx).QuoteString.getText() : null));
                }
                break;
                case MARK:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(126);
                    ((AtomContext) _localctx).MARK = match(MARK);
                    values.add((((AtomContext) _localctx).MARK != null ? ((AtomContext) _localctx).MARK.getText() : null));
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }
